--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<div id="reactions" data-id="3123"></div>
+<div id="reactions" data-name="Macbook Pro"></div>
 
 </body>
 </html>
