--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<div id="kaanjo" data-product="Macbook Pro" data-key="f8d4cd52454ef93e835a9b0d"></div>
+<div id="kaanjo" data-product="Vagina" data-key="f8d4cd52454ef93e835a9b0d"></div>
 
 </body>
 </html>
